# grpcpp

./: .gitignore  CMakeLists.txt  LICENSE  dockerfile  readme.md
app/: CMakeLists.txt
app/server/: main.cpp
client/: main.cpp
container/: dockerfile
doc/: readme.md
proto/: client_server_bidi_async_stream.proto  greeter.proto
server/: main.cpp
src/: CMakeLists.txt  main.cpp
src/client/: gclient.cpp  gclient.h  main.cpp
src/common/: grpctype.h  log_helper.cpp  log_helper.h
src/server/: gserver.cpp  gserver.h  gsession.cpp  gsession.h  main.cpp
